<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <!-- Leaves for rating tea. -->
    <LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
	    android:orientation="horizontal"
	    android:gravity="center_horizontal"
	    android:paddingTop="7dip"
	    android:paddingBottom="7dip"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content">

	    <ImageView
	        android:id="@+id/gray_leaf_1"
	        android:contentDescription="@string/gray_leaf_1"
	        android:layout_gravity="center"
	        android:layout_width="40dp"
	        android:layout_height="40dp" />
        <ImageView
            android:id="@+id/gray_leaf_2"
            android:contentDescription="@string/gray_leaf_2"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <ImageView
            android:id="@+id/gray_leaf_3"
            android:contentDescription="@string/gray_leaf_3"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <ImageView
            android:id="@+id/gray_leaf_4"
            android:contentDescription="@string/gray_leaf_4"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        <ImageView
            android:id="@+id/gray_leaf_5"
            android:contentDescription="@string/gray_leaf_5"
            android:layout_gravity="center"
            android:layout_width="40dp"
            android:layout_height="40dp" />
        
    </LinearLayout>

    <!-- Image of tea leaves. -->
    <ImageView
        android:id="@+id/tea_leaves"
        android:contentDescription="@string/tea_leaves"
        android:layout_gravity="center"
        android:paddingTop="5dip"
        android:paddingBottom="5dip"
        android:paddingLeft="5dip"
        android:paddingRight="5dip"
        android:layout_width="400dp"
        android:layout_height="300dp" />

    <TextView
        android:id="@+id/tea_description"
        android:text="@string/tea_description"
        android:textColor="#000000"
        android:layout_gravity="top"
        android:paddingLeft="20dip"
        android:paddingRight="20dip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
</LinearLayout>
