<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/tea_leaves"
        android:contentDescription="@string/tea_leaves"
        android:layout_gravity="left"
        android:paddingTop="3dip"
        android:paddingBottom="2dip"
        android:layout_width="56dp"
        android:layout_height="42dp" />

    <LinearLayout
	    xmlns:android="http://schemas.android.com/apk/res/android"
      android:paddingTop="3dip"
      android:paddingLeft="5dip"
      android:paddingBottom="3dip"
	    android:orientation="vertical"
	    android:layout_toRightOf="@id/tea_leaves"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content">

	    <TextView
	        android:id="@+id/tea_name"
	        android:text="@string/tea_name"
	        android:textColor="#000000"
	        android:textStyle="bold"
	        android:textSize="16sp"
	        android:fontFamily="sans-serif"
	        android:layout_weight="0.5"
	        android:layout_gravity="top"
	        android:layout_width="wrap_content"
	        android:layout_height="0dp" />

	    <TextView
	        android:id="@+id/tea_group"
	        android:text="@string/tea_group"
          android:textSize="12sp"
	        android:layout_gravity="bottom"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" />        
    </LinearLayout>

    <TextView
        android:id="@+id/tea_rating"
        android:text=""
        android:textSize="12sp"
        android:gravity="bottom"
        android:paddingBottom="3dip"
        android:paddingRight="12dip"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="fill_parent" />

</RelativeLayout>
